Closed
Bug 243419
Opened 21 years ago
Closed 21 years ago
gtkmozembed doesn't handle being moved between toplevels
Categories
(Core Graveyard :: Embedding: GTK Widget, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: chpe, Assigned: blizzard)
References
Details
(Keywords: fixed1.7)
Attachments
(1 file)
|
3.68 KB,
patch
|
blizzard
:
review+
bryner
:
superreview+
asa
:
approval1.7+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.0.1) Gecko/20020823 Netscape/7.0
Build Identifier:
GtkMozEmbed's realize handler connects callbacks to the toplevel's focus in/out
signals. However, it only does so on the first realize, and doesn't disconnect
on unrealize.
Now, when a GtkMozEmbed is moved to a different toplevel (like we do in Epiphany
by moving the tab containing the embed to another window by DND), the signal
handlers will be called from the wrong toplevel: from the old toplevel instead
of from the new toplevel.
Reproducible: Always
Steps to Reproduce:
| Reporter | ||
Comment 1•21 years ago
|
||
Disconnect the focus in/out handlers from the toplevel on unrealize, and
connect them on every realize event.
| Reporter | ||
Updated•21 years ago
|
Attachment #148313 -
Flags: review?(blizzard)
| Assignee | ||
Updated•21 years ago
|
Attachment #148313 -
Flags: review?(blizzard) → review+
| Reporter | ||
Updated•21 years ago
|
Attachment #148313 -
Flags: superreview?(bryner)
Comment 2•21 years ago
|
||
*** Bug 242809 has been marked as a duplicate of this bug. ***
Updated•21 years ago
|
Attachment #148313 -
Flags: superreview?(bryner) → superreview+
Comment 3•21 years ago
|
||
Comment on attachment 148313 [details] [diff] [review]
proposed fix
I am requesting approval for checking to 1.7. This patch fixes a nasty random
crash when using the gtk embedding widet (such as galeon and epiphany), see bug
242809 for that crash.
This is low risk, as it only touches the gtk embedding code, and will save a
lot of random crashes.
Attachment #148313 -
Flags: approval1.7?
Comment 4•21 years ago
|
||
Comment on attachment 148313 [details] [diff] [review]
proposed fix
a=asa (on behalf of drivers) for checkin to 1.7
Attachment #148313 -
Flags: approval1.7? → approval1.7+
Updated•21 years ago
|
Status: UNCONFIRMED → NEW
Ever confirmed: true
| Assignee | ||
Comment 5•21 years ago
|
||
Checked into the trunk.
| Assignee | ||
Comment 6•21 years ago
|
||
Checked into the 1.7 branch.
Updated•13 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•