Bug #243419.  gtkmozembed doesn't handle being moved between toplevels.  Patch from chpe@gnome.org.  r=blizzard,sr=bryner